mutants.out/log/crates__node__src__lib.rs_line_107_col_9.log

*** crates/node/src/lib.rs:107:9: replace <impl FromStr for NodeKind>::from_str -> Result<Self, Self::Err> with Ok(Default::default())

*** mutation diff:
--- crates/node/src/lib.rs
+++ replace <impl FromStr for NodeKind>::from_str -> Result<Self, Self::Err> with Ok(Default::default())
@@ -99,28 +99,17 @@
         f.write_str(self.as_str())
     }
 }
 
 impl FromStr for NodeKind {
     type Err = NodeKindParseError;
 
     fn from_str(value: &str) -> Result<Self, Self::Err> {
-        match value {
-            "trigger" => Ok(Self::Trigger),
-            "llm_task" => Ok(Self::LlmTask),
-            "code_task" => Ok(Self::CodeTask),
-            "integration" => Ok(Self::Integration),
-            "condition" => Ok(Self::Condition),
-            "loop" => Ok(Self::Loop),
-            "join" => Ok(Self::Join),
-            "approval" => Ok(Self::Approval),
-            "artifact" => Ok(Self::Artifact),
-            other => Err(NodeKindParseError::Unknown(other.to_string())),
-        }
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[derive(Debug, Clone, PartialEq, Eq)]
 pub enum NodeKindParseError {
     Unknown(String),
 }
 


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=node@0.1.0
       Dirty node v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/node): the file `crates/node/src/lib.rs` has changed (1778057740.554893122s, 3s after last build at 1778057737.603415165s)
   Compiling node v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/node)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name node --edition=2024 crates/node/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3bc862ccd01a2000 -C extra-filename=-b70d28c7a1789ac2 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name node --edition=2024 crates/node/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=520cd8b6ffaa8ea6 -C extra-filename=-ef5821e0cee689fe --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps`
error[E0277]: the trait bound `NodeKind: Default` is not satisfied
   --> crates/node/src/lib.rs:107:12
    |
107 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NodeKind`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `node` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name node --edition=2024 crates/node/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3bc862ccd01a2000 -C extra-filename=-b70d28c7a1789ac2 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `node` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name node --edition=2024 crates/node/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=520cd8b6ffaa8ea6 -C extra-filename=-ef5821e0cee689fe --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
